--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,16 +711,43 @@
       display: none;
     }
   }
-  @media only screen and (max-width: 990px ) {
+  @media only screen and (max-width: 996px) {
     #introduction{
       margin-top: 300px;
     }
   }
-  
+  @media only screen and (max-width: 991px) {
+    #introduction{
+      margin-top: 500px;
+    }
+  }
+  @media only screen and (max-width: 991px) {
+    #introduction{
+      margin-top: 500px;
+    }
+  }
+  @media only screen and (max-width: 360px) {
+    #introduction{
+      margin-top: 370px!important;
+    }
+  }
+  @media only screen and (max-width: 480px) {
+    #introduction{
+      margin-top: 450px;
+    }
+  }
   @media only screen and (max-width: 990px ) {
     #testimonialz .testimonialz-comment{
       padding-left: 30px;
       padding-right: 30px;
     }
+  }
+  @media (min-width:1400px) and (max-width:2732px){
+      .main-banner{
+        height: 50vh!important;
+      }
+      #introduction{
+        margin-top: 200px!important;
+      }
   }
  
